--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -185,13 +185,13 @@ $ hciconfig -a
 3.Classic Bluetooth Operations
 
 ```shell
-经典蓝牙扫描
+# Start scanning
 bluetoothctl scan on
-配对
+# Pair with a device (replace with target MAC)
 bluetoothctl pair 28:52:E0:19:17:69
-连接
+ # Connect to a paired device
 bluetoothctl connect 28:52:E0:19:17:69
-信任此设备，下次可直接连接 无需配对
+# Trust the device for auto-connection
 bluetoothctl trust 28:52:E0:19:17:69
 断开
 bluetoothctl disconnect 28:52:E0:19:17:69
