--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -189,28 +189,28 @@ $ hciconfig -a
 bluetoothctl scan on
 # Pair with a device (replace with target MAC)
 bluetoothctl pair 28:52:E0:19:17:69
- # Connect to a paired device
+# Connect to a paired device
 bluetoothctl connect 28:52:E0:19:17:69
 # Trust the device for auto-connection
 bluetoothctl trust 28:52:E0:19:17:69
-断开
+# Disconnect
 bluetoothctl disconnect 28:52:E0:19:17:69
-解除配对
+# Unpair a device (replace with MAC)
 bluetoothctl remove FC:E8:06:E7:96:AF   
-阻止连接
+# Block connection from a device
 bluetoothctl block  FC:E8:06:E7:96:AF 
-查看配好对的蓝牙设备
+# List paired devices
 bluetoothctl paired-devices
 ```
 
 设置蓝牙设备播放音频
 
 ``` shell
-查看连接的蓝牙设备
+# Check connected devices
 bluetoothctl paired-devices 
-设置蓝牙播放
+# Set Bluetooth as default audio sink (replace MAC)
 pacmd set-default-sink bluez_sink.28_52_E0_19_17_69.a2dp_sink
-播放音频
+# Play audio through Bluetooth
 aplay sample-15s.wav
 ```
 
