--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -217,7 +217,7 @@ aplay sample-15s.wav
 ![image-20250428144858777](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250428144858777.png)
 
 ``` shell
-低功耗BLE蓝牙扫描
+BLE (Low Energy) Scan
 $ hcitool -i hci0 cmd 0x03 0x0003
 $ hcitool -i hci0 cmd 08 01 3f 00 00 00 00 00 00 00
 $ hcitool lescan
@@ -227,7 +227,7 @@ $ hcitool lescan
 
 ## USB
 
-USB口接入U盘
+Insert a USB flash drive and:
 
 ``` shell
 lsblk
