--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -255,19 +255,19 @@ mount
 # lsusb
 ```
 
-2.确认串口结点是否生成
+2.Verify Serial Port Creation
 
 ```shell
 # ls /dev/ttyUSB*
 ```
 
-3.插拔电话卡重新拨号
+3.Re-dial with SIM Card
 
 ```shell
 # sudo pppd call quectel-ppp &
 ```
 
-可能会出现没播通情况
+If dialing fails:
 通过`ps -ef | grep pppd` 查看进程号
 `kill -9 (进程号)` 结束进程
 然后重新拨号
