--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -268,9 +268,13 @@ mount
 ```
 
 If dialing fails:
-通过`ps -ef | grep pppd` 查看进程号
-`kill -9 (进程号)` 结束进程
-然后重新拨号
+``` 
+ps -ef | grep pppd  # Find the process ID
+kill -9 <PID>       # Terminate the process
+# Repeat the dialing command
+```
+
+
 
 4.外网ping测试
 
