--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -276,21 +276,20 @@ kill -9 <PID>       # Terminate the process
 
 
 
-4.外网ping测试
+4.External Network Ping Test
 
 ```shell
 # ping www.baidu.com
 ```
 
-ping外网可能出现DNS解析失败，需要添加对应DNS
-
-修改resolv.conf文件
+DNS Resolution Issue?
+Edit the resolv.conf file:
 
 ```shell
 # vim /etc/resolv.conf
 ```
 
-可以添加下面内容:
+Add the following DNS servers:
 
 ```shell
 nameserver 8.8.8.8
