--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -300,7 +300,7 @@ nameserver 8.8.4.4
 
 **Android**
 
-安卓TV系统不支持4G
+Android TV system does not support 4G functionality.
 
 
 
@@ -308,13 +308,11 @@ nameserver 8.8.4.4
 
 **Android**
 
-按下USER按键为休眠唤醒
-
-长按为关机，无法长按开机
+Pressing the USER button wakes the device from sleep; long-pressing shuts it down (long-press does not power it on).
 
 **Ubuntu**
 
-按下USER按键打开Log out界面
+Pressing the USER button opens the "Log out" interface.
 
 ![image-20250512100543793](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512100543793.png)
 
