--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -318,15 +318,13 @@ Pressing the USER button opens the "Log out" interface.
 
 ## RS485/232
 
-> 板卡：K2C
+> Applicable to K2C
 
-KICKPI-K2C设计中可选配：一路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
-
-板卡背后有丝印标记
+KICKPI-K2C supports optional configurations: one RS485 port (/dev/ttyAS3) and one RS232 port (/dev/ttyAS4). Port labels are silkscreened on the board's back.
 
 ![image-20250428162920707](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250428162920707.png)
 
-设置波特率
+Configuration Commands
 
 ```shell
 stty -F /dev/ttyAS3 115200
