--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -327,19 +327,9 @@ KICKPI-K2C supports optional configurations: one RS485 port (/dev/ttyAS3) and on
 Configuration Commands
 
 ```shell
-stty -F /dev/ttyAS3 115200
-```
-
-发送数据
-
-``` shell
-echo "123" > /dev/ttyAS3
-```
-
-接收数据
-
-``` shell
-cat /dev/ttyAS3
+stty -F /dev/ttyAS3 115200  # Set baud rate (e.g., 115200 for RS485)
+echo "123" > /dev/ttyAS3     # Send data through RS485
+cat /dev/ttyAS3              # Receive data from RS485
 ```
 
 
