--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -334,9 +334,9 @@ cat /dev/ttyAS3              # Receive data from RS485
 
 
 
-## 常见问题
+## FAQ
 
-有线网口使用局域网，WiFi连接网络时无法访问外网
+Problem: Unable to access the internet when using both a wired LAN and WiFi connection.
 
 ![image-20250427165431777](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250427165431777.png)
 
