--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -340,5 +340,5 @@ Problem: Unable to access the internet when using both a wired LAN and WiFi conn
 
 ![image-20250427165431777](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250427165431777.png)
 
-[解决Linux下同时使用有线和无线网络时，网络连接的优先级问题_linux以太网和无线网冲突问题-CSDN博客](https://blog.csdn.net/qq547276542/article/details/78713893)
+[Solution: Refer to Resolving Network Priority Issues When Using Wired and Wireless Networks Simultaneously in Linux.](https://blog.csdn.net/qq547276542/article/details/78713893)
 
