--- a/rk356x-rk3588/zh/02-入门必读/02-K8-快速使用.md
+++ b/rk356x-rk3588/zh/02-入门必读/02-K8-快速使用.md
@@ -55,15 +55,19 @@ K8主板拥有的显示接口，可以在[K8硬件介绍](../01-主板介绍/02-
 
 **KICKPI 开发板显示屏接口均搭配对应屏的转接板使用，购买屏会配置接好发货哈**
 
-### MIPI
+### LVDS/MIPI
 
-K8默认适配KICKPI 售卖的 MIPI 5寸、8寸、10.1寸等屏
+K8默认适配KICKPI 售卖的MIPI 5寸、8寸、10.1寸等屏
 
 * 接线方式:
 
-MIPI 接口: [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-1)
+MIPI 0接口: [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-1)
 
-![image-20250513145557787](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250513145557787.png)
+![image-20250513145744893](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250513145744893.png)
+
+MIPI 1接口: [抽拉式上接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-2)
+
+![image-20250513145800459](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250513145800459.png)
 
 ### eDP
 
