--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -74,7 +74,7 @@ gpio mode <wPi> <mode> //设置管脚工作模式 (当前版本支持设置out/i
 gpio write <wPi> <val> //设置管脚输出电平
 ```
 
-### 使用演示
+使用演示
 
 设置PH5为输出模式，输出高电平
 
@@ -105,14 +105,6 @@ kickpi@kickpi:~$ gpio read 0
 kickpi@kickpi:~$
 ```
 
-### GPIO控制
-
-
-### GPIO编号查询
-
-``` shell
-cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pins
-```
 
 
 ### sys gpio控制
@@ -169,8 +161,6 @@ root@kickpi:~# cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins | grep 
 ![image-20250326142738724](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326142738724.png)			
 
 通过结点下的内容控制 gpio , 常用如下
-
-
 
 设置GPIO方向
 
