--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -181,9 +181,7 @@ echo 0 > /sys/class/gpio/gpio226/value  // 配置低电平
 
 ### 示例功能配置
 
-
-
-### GPIO输出
+GPIO输出
 
 K2B开发板默认配置两路GPIO输出功能，分别为PC12（12脚）、PC7（14脚）
 
@@ -237,9 +235,7 @@ gpio-para 是全志的GPIO控制驱动，可实现简单的电平高低控制
 };
 ```
 
-
-
-### GPIO按键
+GPIO按键
 
 ```
 /{
