--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -235,6 +235,15 @@ gpio-para 是全志的GPIO控制驱动，可实现简单的电平高低控制
 };
 ```
 
+控制
+
+``` shell
+echo 1 > /sys/class/gpio_sw/PC12/data 
+echo 0 > /sys/class/gpio_sw/PC12/data 
+```
+
+
+
 GPIO按键
 
 ```
