--- a/h618/zh/03-镜像烧录/01-SD卡烧录.md
+++ b/h618/zh/03-镜像烧录/01-SD卡烧录.md
@@ -30,9 +30,9 @@ PhoenixCard.rar 直接解压后打开即可，打开界面如下
 
 量产卡和启动卡的区别
 
-量产卡会自动将SD卡里的系统镜像烧录进入emmc中，无法直接启动
+量产卡：会自动将SD卡里的系统镜像烧录进入emmc中，无法直接启动
 
-启动卡会从SD卡中启动系统，能够直接启动系统
+启动卡：会从SD卡中启动系统，能够直接启动系统
 
 #### 启动卡烧录
 
