--- a/h618/zh/02-入门必读/02-快速使用.md
+++ b/h618/zh/02-入门必读/02-快速使用.md
@@ -190,9 +190,9 @@ SSH（Secure Shell）是一种[网络协议](https://so.csdn.net/so/search?q=网
 3. **换个路由器试下（路由器的问题有遇到过很多，比如路由器无法正常分配IP地址，或者已正常分配IP地址但在路由器中看不到）；**
 4. **如果没有路由器可换就只能连接HDMI显示器或者使用调试串口来查看IP地址。**
 
-
-
 **另外需要注意的是开发板DHCP自动分配IP地址是不需要任何设置的。**
+
+支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
 
 ### 用户信息
 
