--- a/h618/en/02-Getting Started Guide/04-扩展引脚.md
+++ b/h618/en/02-Getting Started Guide/04-扩展引脚.md
@@ -1,283 +1,206 @@
-# 04-扩展引脚
+# 04-Expansion Pins
 
+## Serial Port
 
+**Test Tools**
 
-## 串口
-
-测试工具
-
-使用 USB 转 TTL线
+Use USB-to-TTL cable.
 
 ![image-20241231145656021](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231145656021.png)
 
-**TTL普通串口**
+**TTL Standard Serial Port**
 
-使用串口工具连接
+Connect using a serial port tool.
 
 ![66637824ee48c91b31130503a4400149](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/66637824ee48c91b31130503a4400149.jpg)
 
+**Software Testing Methods**
 
+*PC Serial Port Configuration*
 
-**软件测试方法**
+*Mainboard Serial Port Configuration*
 
-串口测试采用stty命令，。。。。
+`ttyAS5` corresponds to serial port 5 (pins PH2 and PH3) with a baud rate of 115200.
 
-PC设置串口
-
-
-
-主板设置串口
-
-ttyAS5为串口5 对应管脚PH2 PH3 115200是波特率
-
-``` shell
+```shell
 stty -F /dev/ttyAS5 ispeed 115200 ospeed 115200 cs8 
 ```
 
-向串口发送数据
+Send data to the serial port:
 
-``` shell
+```shell
 echo kickpi > /dev/ttyAS5  
 ```
 
-接收数据
+Receive data:
 
-``` shell
+```shell
 cat /dev/ttyAS5 
 ```
 
-
+---
 
 ## GPIO
 
-### 
+### WiringKP Tool Usage
 
-> 板卡：K2B
+> Board: K2B
 
-工具下载网盘地址路径
+Tool download path (network drive):  
+`h618_data\3-SoftwareData\GPIO_tools`
 
-h618_data\3-SoftwareData软件资料\GPIO_tools
+Extract `wiringKP.tar.gz` on the board. Place executables and libraries into `/usr/bin` and `/usr/lib`.
 
-将wiringKP.tar.gz在板卡上解压
-
-可执行文件和库文件分别放到/usr/bin和/usr/lib目录下
-
-``` shell
-gpio readall //获取所有管脚状态
+```shell
+gpio readall // Get all pin status
 ```
 
 ![image-20250314150200725](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250314150200725.png)
 
-``` shell
-gpio read <wPi>        //读管脚电平
-gpio mode <wPi> <mode> //设置管脚工作模式 (当前版本支持设置out/int/up/down 模式)
-gpio write <wPi> <val> //设置管脚输出电平
+```shell
+gpio read <wPi>        // Read pin level
+gpio mode <wPi> <mode> // Set pin mode (supports out/in/up/down)
+gpio write <wPi> <val> // Set pin output level
 ```
 
-### 使用演示
+**Example Usage**  
+Set PH5 to output mode and output high level (Note: PC pins output 1.8V, PH pins output 3.3V):
 
-设置PH5为输出模式，输出高电平
-
-其中PC管脚输出电压为1.8V，PH管脚输出电压为3.3V
-
-``` shell
+```shell
 kickpi@kickpi:~$ gpio mode 0 out
 kickpi@kickpi:~$ gpio read 0
 0
 kickpi@kickpi:~$ gpio write 0 1
 kickpi@kickpi:~$ gpio read 0
 1
-kickpi@kickpi:~$
 ```
 
-可使用万用表测得此时PH5管脚为高电平
+Use a multimeter to verify PH5 is high.  
+Set PH5 to input mode with pull-down:
 
-设置PH5为输入模式
-
-``` shell
+```shell
 kickpi@kickpi:~$ gpio mode 0 in
 kickpi@kickpi:~$ gpio mode 0 down
 kickpi@kickpi:~$ gpio read 0
 0
-kickpi@kickpi:~$//短接管脚3和管脚4
+kickpi@kickpi:~$ // Short pins 3 and 4
 kickpi@kickpi:~$ gpio read 0
 1
-kickpi@kickpi:~$
 ```
 
-### GPIO控制
+---
 
+### sys GPIO Control
 
-### GPIO编号查询
+**Step 1: Release GPIO via `/sys/class/gpio`**  
+Ensure the target GPIO is in `UNCLAIMED` state:
 
-``` shell
-cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pins
-```
-
-
-### sys gpio控制
-
-将GPIO释放出来，通过/sys/class/gpio进行控制
-
-步骤一 修改管脚状态
-
-/sys/class/gpio/export 只能导出UNCLAIMED状态的 gpio
-
-查看所需管脚是否是UNCLAIMED状态
-
-``` shell
+```shell
 cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins
 ```
 
-管脚非UNCLAIMED状态 说明管脚被内核注册了，需要修改设备树，注释掉其默认功能
-
-PH2 PH3 做举例
-
-查询管脚状态，发现PH2 PH3作为了uart5
+If pins are claimed (e.g., PH2/PH3 used as UART5), modify the device tree to disable default functions:
 
 ![image-20250326115428401](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326115428401.png)
 
+Edit device tree files:
 ```diff
-vim longan/device/config/chips/h618/configs/p2/linux-5.4/board-*.dts  //android
-vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/sun50iw9-kickpi-k2b.dts //Linux
+vim longan/device/config/chips/h618/configs/p2/linux-5.4/board-*.dts  // Android
+vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/sun50iw9-kickpi-k2b.dts // Linux
 ```
 
-关闭默认功能
+**Step 2: Rebuild and flash the firmware.**  
+**Step 3: Confirm GPIO is unclaimed:**
 
-![image-20250326133713399](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326133713399.png)
-
-步骤二
-
-​		编译镜像，重新烧录
-
-步骤三
-
-​		确认gpio未被注册
-
-```
-root@kickpi:~# cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins | grep PH
+```shell
+cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins | grep PH
 ```
 
-​		能够看到PH2 PH3未被使用，且对应 pin 值为 226 227
+**Step 4: Export and control GPIO (e.g., PH2=226, PH3=227):**
 
-![image-20250326142700157](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326142700157.png)
+![image-20250326142738724](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326142738724.png)
 
-步骤四
-
-​		通过 /sys/class/gpio/export 注册 PH2，PH3 并进行控制
-
-![image-20250326142738724](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326142738724.png)			
-
-通过结点下的内容控制 gpio , 常用如下
-
-
-
-设置GPIO方向
-
+Set direction:
 ```shell
 echo in > /sys/class/gpio/gpio226/direction
 echo out > /sys/class/gpio/gpio226/direction
 ```
 
-
-
-设置GPIO值
-
-```
-cat /sys/class/gpio/gpio226/value 		// 读取
-echo 1 > /sys/class/gpio/gpio226/value	// 配置高电平
-echo 0 > /sys/class/gpio/gpio226/value  // 配置低电平
+Read/write value:
+```shell
+cat /sys/class/gpio/gpio226/value      // Read
+echo 1 > /sys/class/gpio/gpio226/value // Set high
+echo 0 > /sys/class/gpio/gpio226/value // Set low
 ```
 
-### 示例功能配置
+---
 
+### Example Configurations
 
+**GPIO Output**  
+Default GPIO outputs on K2B: PC12 (pin 12) and PC7 (pin 14).  
+*Note: Other pins may require disabling default functions.*
 
-### GPIO输出
+Control methods: `gpio-leds` (Linux kernel driver) or `gpio_para` (Allwinner driver).
 
-K2B开发板默认配置两路GPIO输出功能，分别为PC12（12脚）、PC7（14脚）
-
-注意：其他引脚已配置为其他功能，若要配置为GPIO功能，则需要先把默认功能去掉
-
-其中PC管脚输出电压为1.8V，PH管脚输出电压为3.3V
-
-GPIO输出 提供两种控制方式，分别为gpio-leds、gpio_para
-
-**gpio-leds**
-
-gpio-leds 是LINUX内核自带的GPIO控制驱动，可实现丰富的控制方式
-
-系统中目录位于/sys/class/leds
-
-以下示例为 系统运行指示灯配置，实现心跳闪烁功能
-
-```
-/{
-		gpio-leds {
-                compatible = "gpio-leds";
-                status = "okay";
-
-                sys_led {
-                        label="sys_led";
-                        gpio = <&pio PI 16 GPIO_ACTIVE_HIGH>;
-                        linux,default-trigger = "heartbeat";
-                };
+**gpio-leds Example (Heartbeat LED):**
+```dts
+/{ 
+    gpio-leds {
+        compatible = "gpio-leds";
+        status = "okay";
+        sys_led {
+            label="sys_led";
+            gpio = <&pio PI 16 GPIO_ACTIVE_HIGH>;
+            linux,default-trigger = "heartbeat";
         };
+    };
 };
 ```
 
-
-
-**gpio_para**
-
-gpio-para 是全志的GPIO控制驱动，可实现简单的电平高低控制
-
-系统中目录位于/sys/class/gpio_sw
-
-以下示例为 扩展引脚PC7、PC12的配置
-
-```
+**gpio_para Example (PC7/PC12 Control):**
+```dts
 &soc {
-        gpio_para {
-                gpio_num = <2>;
-                gpio_pin_1 = <&pio PC 7 GPIO_ACTIVE_HIGH>;
-                gpio_pin_2 = <&pio PC 12 GPIO_ACTIVE_HIGH>;
-                status = "okay";
-        };
+    gpio_para {
+        gpio_num = <2>;
+        gpio_pin_1 = <&pio PC 7 GPIO_ACTIVE_HIGH>;
+        gpio_pin_2 = <&pio PC 12 GPIO_ACTIVE_HIGH>;
+        status = "okay";
+    };
 };
 ```
 
-
-
-### GPIO按键
-
+Control commands:
+```shell
+echo 1 > /sys/class/gpio_sw/PC12/data  // High
+echo 0 > /sys/class/gpio_sw/PC12/data  // Low
 ```
-/{
-		gpio-keys {
-                compatible = "gpio-keys";
-                status = "okay";
-                autorepeat;
 
-                power {
-                        label = "Power Key";
-                        linux,code = <KEY_POWER>;
-                        gpio = <&pio PC 2 GPIO_ACTIVE_LOW>;     /* PC7 */
-                        wakeup-source;
-                        debounce-interval = <100>;
-                };
+**GPIO Key Example:**
+```dts
+/{ 
+    gpio-keys {
+        compatible = "gpio-keys";
+        status = "okay";
+        autorepeat;
+        power {
+            label = "Power Key";
+            linux,code = <KEY_POWER>;
+            gpio = <&pio PC 2 GPIO_ACTIVE_LOW>; // PC7
+            wakeup-source;
+            debounce-interval = <100>;
         };
+    };
 };
 ```
 
+---
 
+## Modify UART Control Port
 
-## 修改UART控制端口
+Change `debug_uart` to an unused UART (e.g., UART0 is reserved for U-Boot logs):
 
-修改debug_uart到你想用的uart，取消就用未使能的uart口
-
-> uart0固定会打印uboot日志
-
-```
+```diff
 +++ b/source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/uEnv/uEnv.txt
 @@ -4,4 +4,4 @@ console=both
  disp_mode=1080p60
@@ -287,26 +210,26 @@ gpio-para 是全志的GPIO控制驱动，可实现简单的电平高低控制
 +debug_uart=ttyAS3
 ```
 
+---
 
+## Add UART2 Support
 
-## 添加uart2支持
-
-PH6,7,8,9默认为SPI
-PH4,5默认为I2C
-要将PH5 PH6作为UART2使用，则原先的默认功能就要关闭，uart2功能要打开
+PH6/PH7/PH8/PH9 default to SPI. PH4/PH5 default to I2C. To use PH5/PH6 as UART2:  
+1. Disable default functions.  
+2. Enable UART2 in the device tree.
 
 ![cf9c366bb88d7214bc93412cbc0accb3](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/cf9c366bb88d7214bc93412cbc0accb3.jpg)
 
+---
 
+## TTL-to-485 Module Wiring
 
-## TTL转485模块
-
-模块接uart5接线图
-
+Connect to UART5:  
 ![image-20250324195428239](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250324195428239.png)
 
-## TTL转232模块接线
+---
 
-模块接uart5接线图
+## TTL-to-232 Module Wiring
 
+Connect to UART5:  
 ![image-20250324195442978](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250324195442978.png)
