--- a/rk356x-rk3588/en/02-Getting_Started_Guide/01-网盘目录说明.md
+++ b/rk356x-rk3588/en/02-Getting_Started_Guide/01-网盘目录说明.md
@@ -1,99 +1,72 @@
-# 01-网盘目录说明
+# 01-Cloud_Storage_Directory_Description
 
-KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDrive网盘
+The KICKPI development materials are distributed via cloud storage, supporting both Baidu Cloud and OneDrive.
 
-两份网盘资料内容一致，可根据实际情况自行选择
+The contents of the two cloud storage accounts are identical. You can choose according to your actual situation.
 
-网盘链接可通过 购买平台或QQ咨询客服获取
+You can obtain the cloud storage links through the purchase platform or by consulting the customer service on QQ.
 
-
-
-## 目录列表
-
+## Directory List
 ```
-├── 0-Specifications规格书
-│   ├── K1B-RK3568
-│   ├── K1-RK3568
-│   └── K3-RK3562
-├── 1-SDK软件源码
-│   ├── android13
-│   └── linux
-├── 2-Image镜像
-│   ├── RK3562-K3
-│   ├── RK3566-TX66
-│   ├── RK3568-K1
-│   └── RK3568-K1B
-├── 3-SoftwareData软件资料
-│   ├── Android APK Signature
-│   ├── Android Navigation Status
-│   ├── GCC Cross toolchains
-│   ├── Linux Backup ROOTFS Script
-│   ├── PATCH
-│   ├── Qt_demo
-│   ├── RKNPU
-│   └── RK SDK docs
-├── 4-HardwareData硬件资料
-│   ├── CAMERA
-│   ├── LCD
-│   ├── RK3562-K3
-│   ├── RK3568-K1
-│   └── RK3568-K1B
-├── 5-DevelopmentTools开发工具
-│   ├── ADB Tool
-│   ├── ADB投屏
-│   ├── FactoryTool 工厂镜像烧录工具
-│   ├── LinuxPackFirmware
-│   ├── QT
-│   ├── SDDiskTool
-│   ├── UART DebugTool 串口调试工具
-│   ├── USB Driver USB驱动
-│   └── USB ImageBurnTool 镜像烧录工具
+├── 0-Specifications
+│   ├── K1B-RK3568
+│   ├── K1-RK3568
+│   └── K3-RK3562
+├── 1-SDK Software Source Code
+│   ├── android13
+│   └── linux
+├── 2-Image
+│   ├── RK3562-K3
+│   ├── RK3566-TX66
+│   ├── RK3568-K1
+│   └── RK3568-K1B
+├── 3-Software Data
+│   ├── Android APK Signature
+│   ├── Android Navigation Status
+│   ├── GCC Cross toolchains
+│   ├── Linux Backup ROOTFS Script
+│   ├── PATCH
+│   ├── Qt_demo
+│   ├── RKNPU
+│   └── RK SDK docs
+├── 4-Hardware Data
+│   ├── CAMERA
+│   ├── LCD
+│   ├── RK3562-K3
+│   ├── RK3568-K1
+│   └── RK3568-K1B
+├── 5-Development Tools
+│   ├── ADB Tool
+│   ├── ADB Screen Mirroring
+│   ├── FactoryTool - Factory Image Burning Tool
+│   ├── LinuxPackFirmware
+│   ├── QT
+│   ├── SDDiskTool
+│   ├── UART DebugTool - Serial Port Debugging Tool
+│   ├── USB Driver - USB Driver
+│   └── USB ImageBurnTool - Image Burning Tool
 └── README.txt
 ```
 
-## 目录说明
+## Directory Descriptions
 
-0-Specifications规格书：
+### 0-Specifications
+This directory mainly stores the specifications of various development boards. You can quickly understand the features and performance of the products through these specifications.
 
-本目录下主要放置各型号开发板规格书，通过规格书可以快速了解产品的特性和性能。
+### 1-SDK Software Source Code
+It primarily stores the compressed SDK source code packages for different system versions, which will be updated periodically.
 
+### 2-Image
+It supports system images for Android13, Debian11, and Ubuntu2004. You can update the system of the motherboard by burning these images. For details, refer to the image burning instructions.
 
+### 3-Software Data
+This directory contains software-related materials, such as program examples and software patches.
 
-1-SDK软件源码：
+### 4-Hardware Data
+It stores hardware-related materials, such as schematics.
 
-主要存放各系统版本的SDK源码压缩包，会不定期更新。
+### 5-Development Tools
+These are tools related to burning and debugging, such as burning software and ADB software.
 
-
-
-2-Image镜像：
-
-支持 Android13 / Debian11/ Ubuntu2004 系统镜像
-
-通过烧录镜像更新主板的系统，说明见镜像烧录
-
-
-
-3-SoftwareData软件资料：
-
-软件相关的资料，如程序例子、软件补丁等。
-
-
-
-4-HardwareData硬件资料：
-
-硬件相关的资料，如原理图等。
-
-
-
-5-DevelopmentTool开发工具：
-
-烧录调试相关工具，如烧录软件、ADB软件等。
-
-
-
-6-Docment文档：
-
-用户指导、开发相关资料文档。
-
-
-
+### 6-Documents
+It includes user guides and development-related documentation.
