--- a/rk356x-rk3588/en/02-Getting_Started_Guide/02-K1-快速使用.md
+++ b/rk356x-rk3588/en/02-Getting_Started_Guide/02-K1-快速使用.md
@@ -1,114 +1,96 @@
-# 02-快速使用
+# 02 - Quick Start Guide
 
-本指南旨在帮助用户快速上手使用主板，包含板卡上电、显示屏连接、调试串口、ADB 、SSH 连接等内容。
+This guide is designed to assist users in quickly getting started with the motherboard, covering topics such as powering on the board, connecting a display, using the debug serial port, ADB, and SSH connections.
 
+## Symbol Explanation
 
+* `SDK$`: Represents the source code path.
+* `console$`: Generally refers to the motherboard's command-line console. [Motherboard Command-Line Console](#console_readme)
+* `ADB$`: Android Debug Bridge command-line tool, generally referring to an environment where ADB can be run.
 
-## 符号说明
+## Powering on the Board
 
-* `SDK$`：指代源码路径
+Currently, all series of boards are set to boot automatically upon power-on by default. The following section introduces the power supply methods for each board and the signs of normal board startup.
 
-* `console$`：泛指主板的命令行控制台。[主板命令行控制台](#console_readme)
+### **Power Supply Method**
 
-* `ADB$`：Android Debug Bridge 命令行工具，泛指可运行 ADB 的环境
+The K1 motherboard only supports 12V power supply. The power supply method is through a DC12V socket, and the motherboard is powered by connecting a 12V power adapter.
 
-
-
-## 板卡上电
-
-目前各系列板卡均为默认上电自动开机，下面介绍各板子供电方式及板子正常启动的标志现象
-
-### **供电方式**
-
-K1主板仅支持12V供电，供电方式为DC12V座子，通过接入12V电源设配器给主板供电。
-
-* 实际接线图
+* Actual wiring diagram
 
 ![image-20250416190745103](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250416190745103.png)
 
+### LED Indicators
 
+The development board is equipped with 2 LEDs:
 
-### LED指示灯
+The green LED is the power indicator, which is normally on when powered on.
+The blue LED is the system heartbeat indicator. If the heartbeat light flashes continuously, it indicates that the kernel is running normally.
+Additionally, the system heartbeat indicator can be controlled for other functions as described below.
 
-开发板配备2个LED：
+### **Power-On Steps**
 
-绿色LED为电源指示灯，上电默认长亮
+1. Plug in the DC12V power circular output interface to power on the board.
+2. Initially determine the operating status of the development board through the status of the two LED lights:
+   - The power indicator should be constantly on when powered on. If it is not on, check if there are any abnormalities in the power supply section.
+   - The heartbeat light should flash continuously after the kernel starts. If it does not flash, the system may be running abnormally.
 
-蓝色LED为系统工作心跳灯。若心跳灯持续闪烁，则表示内核正常运行。
+## Display
 
-另外，系统工作心跳灯可参考以下方面控制LED作为其他功能。
+The K1 motherboard has display interfaces. The number of interfaces and the default compatible display types can be found in the [K1 Hardware Introduction](../01-Introduction to the Motherboard/02-KICKPI-K1 Hardware Introduction.md#display) section. You can connect display peripherals as needed.
 
-
-
-### **上电步骤**
-
-1. 插上 DC12V 电源圆形输出接口，给板卡上电。
-2. 通过两个 LED 灯的状态，初步判断开发板运行状态：
-   - 电源指示灯上电即长亮。若不亮，则检查电源部分是否异常。
-   - 心跳灯内核启动后持续闪烁。若不闪烁，则系统运行可能异常。
-
-
-
-## 显示屏
-
-K1主板拥有的显示接口，可以在[K1硬件介绍](../01-主板介绍/02-KICKPI-K1硬件介绍.md#display)章节查看接口数量和默认适配显示屏类型，可以根据需要选择性连接显示屏外设。
-
-**KICKPI 开发板显示屏接口均搭配对应屏的转接板使用，购买屏会配置接好发货哈**
+**All display interfaces on the KICKPI development board are used with the corresponding display adapter boards. The adapter boards will be pre-connected and shipped when you purchase the display.**
 
 ### LVDS/MIPI
 
-K1默认适配KICKPI 售卖的 LVDS7寸屏 MIPI 5寸、8寸、10.1寸等屏
+The K1 is default compatible with LVDS 7-inch screens, MIPI 5-inch, 8-inch, and 10.1-inch screens sold by KICKPI.
 
-* 接线方式:
+* Wiring method:
 
-LVDS/MIPI 0接口: [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-1)
+LVDS/MIPI 0 interface: [Flip-down FPC interface](../../../common/zh/display/FPC Interface Introduction#FPC-1)
 
 ![image-20250512100410963](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512100410963.png)
 
-LVDS/MIPI 1接口: [抽拉式上接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-2)
+LVDS/MIPI 1 interface: [Pull-up FPC interface](../../../common/zh/display/FPC Interface Introduction#FPC-2)
 
 ![image-20250512100640644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512100640644.png)
 
 ### eDP
 
-K1板子设计有一路eDP屏接口
+The K1 board is designed with one eDP screen interface.
 
-eDP接口： [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-1)
+eDP interface: [Flip-down FPC interface](../../../common/zh/display/FPC Interface Introduction#FPC-1)
 
 ![image-20250512141137367](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512141137367.png)
 
 ### HDMI
 
-主板配备配备HDMI OUT显示接口。接口类型为HDMI-A型，支持热插拔。
+The motherboard is equipped with an HDMI OUT display interface. The interface type is HDMI Type-A, which supports hot-plugging.
 
 ![image-20250421112729945](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421112729945.png)
 
+## User and Password
 
+### User Information
 
-## 用户及密码
+The default usernames and passwords for different systems are as follows:
 
-### 用户信息
-
-不同系统的默认用户名和密码如下：
-
-| 系统   | 用户名 | 密码   |
+| System | Username | Password |
 | ------ | ------ | ------ |
 | Debian | linaro | linaro |
-| Debian | root   |        |
+| Debian | root |  |
 | Ubuntu | kickpi | kickpi |
-| Ubuntu | root   |        |
+| Ubuntu | root |  |
 
-> root密码是没有设置，需要手动设置
+> The root password is not set and needs to be set manually.
 
-
-
-### 修改用户密码
+### Changing the User Password
 
 ```
 console$ passwd $username
 ```
 
-示例：
+Example:
 
 ```
 root@kickpi:/# passwd kickpi
@@ -117,121 +99,96 @@ Retype new password:
 passwd: password updated successfully
 ```
 
+## Debug Serial Port
 
+The debug serial port is a UART port on the motherboard, mainly used during the development and debugging phases to help developers understand the internal working conditions of the system. The debug serial port is sometimes also referred to as the console port or the debug terminal.
 
-## 调试串口
+**Baud rate: 1500000** 
 
-调试串口为主板上的一路UART口，主要用于开发和调试阶段，帮助开发者了解系统内部的工作情况；调试串口有时也被称为控制台(console)端口或调试终端(debug terminal)。
+> The USB-to-UART cable connected to the socket also needs to support a baud rate of 1500000 for normal communication.
 
-**波特率：1500000** 
+**Debug Serial Cable Description**
 
->接入座子的USB转UART线也需要支持 1500000 波特率才能正常通信
-
-
-
-**调试串口线说明**
-
-目前提供的调试串口线有四根线，红色的为`VCC`，绿色的为`TX`，白色的为`RX`，黑色的为`GND`，一般不需要连接`VCC`。
+The currently provided debug serial cable has four wires. The red one is `VCC`, the green one is `TX`, the white one is `RX`, and the black one is `GND`. Generally, there is no need to connect the `VCC`.
 
 ![image-20241231145656021](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231145656021.png)
 
-> 其他调试工具线同理，只需连接 TX RX GND即可
+> The same applies to other debug tool cables. Only connect TX, RX, and GND.
 
-**查看DEBUG引脚**
+**Viewing the DEBUG Pins**
 
-各型号主板都设置有一个DEBUG调试串口，均在20PIN/40PIN引脚中，可以在主板介绍中各型号主板硬件介绍的**扩展引脚**中查看DEBUG口位置，同时板子上也会有板子正背面用**丝印标志**出位置所在。
+Each model of the motherboard is equipped with a DEBUG debug serial port, which is located in the 20PIN/40PIN pins. You can view the location of the DEBUG port in the **Expansion Pins** section of the hardware introduction for each model of the motherboard in the motherboard introduction. Additionally, the location is marked with silkscreen on the front and back of the board.
 
 ![image-20250422094320253](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250422094320253.png)
 
-**开发板调试串口接线**
+**Connecting the Debug Serial Port of the Development Board**
 
-调试线`TX`连接主板上的`RX`，`RX`连接主板上的`TX`，`GND`连接主板上的`GND`，不需要连接`VCC`。
+Connect the `TX` of the debug cable to the `RX` of the motherboard, the `RX` of the debug cable to the `TX` of the motherboard, and the `GND` of the debug cable to the `GND` of the motherboard. There is no need to connect the `VCC`.
 
-| 主板扩展引脚  | 调试线引脚 |
+| Motherboard Expansion Pins | Debug Cable Pins |
 | :------------ | ---------- |
-| UART_RX_DEBUG | TX         |
-| UART_TX_DEBUG | RX         |
-| GND           | GND        |
+| UART_RX_DEBUG | TX |
+| UART_TX_DEBUG | RX |
+| GND | GND |
 
+**Downloading the Serial Assistant Software**
 
+You can download the serial assistant software by yourself according to your personal preference. There is no need for a specific tool. The following uses Mobaxterm as an example.
 
-**下载串口助手软件**
+Mobaxterm software download address: https://mobaxterm.mobatek.net/
 
-串口助手软件可自行下载，个人习惯为主，无需特定工具，下面以Mobaxterm为例
+**Mobaxterm Operation Steps**
 
-Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
-
-
-
-**Mobaxterm操作步骤**
-
-1. 打开 Mobaxterm，点击 “Session” 按钮，新建一个会话窗口。
-2. 在会话类型列表中，选择 “Serial”。
-3. 选择串口 COM 编号，可通过打开 Windows 系统设备管理器 -> 端口界面查看。
-4. 将串口波特率设置为 1500000。
-5. 点击 “OK” 启动会话窗口。
-
-
+1. Open Mobaxterm and click the "Session" button to create a new session window.
+2. In the session type list, select "Serial".
+3. Select the serial port COM number, which can be viewed by opening the Windows System Device Manager -> Ports interface.
+4. Set the serial port baud rate to 1500000.
+5. Click "OK" to start the session window.
 
 ![image-20250418175523261](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250418175523261.png)
 
-
-
 ## ADB
 
-K1 Android/Debian系统，支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
-
-
+The K1 Android/Debian system supports the use of the ADB function. For details, refer to the [ADB Tutorial](../../../common/zh/adb/ADB Tutorial.md).
 
 ## SSH
 
-K1 支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
+The K1 supports the use of the SSH function. For details, refer to [SSH](../../../common/zh/linux/SSH.md).
 
+## Common Issues
 
+### **Power Supply Issue**
 
+When the motherboard is connected to multiple peripherals, resulting in high power consumption, after connecting the power supply, the power-on green light may be dim or not remain constantly on, and the system startup may also be abnormal.
 
+**Solution**: This is generally a power supply issue. Please check if the power consumption of the corresponding power supply is sufficient to support the power supply of the connected peripheral modules.
 
-## 常见问题
+### **MIPI Screen Display Issue**
 
-### **上电供电问题**
+If the MIPI screen fails to display, check if the wiring is correct and if the backlight is lit normally.
 
-当主板接入较多外设，导致功耗较高时，接入电源后，上电绿灯可能会较暗或不能保持常亮，系统启动也可能出现异常。
+**Solution**:
 
-**解决方案**：这一般是电源供电问题，请检测对应电源的功耗是否足够，能否支持所连接的外设模块供电。
+If the backlight is not lit, check the wiring. [MIPI_DSI Wiring](#MIPIDSI)
+If the backlight is lit, check the software. (K7 V1.2 does not support automatic recognition of MIPI screens yet. Different software needs to be burned for corresponding screens.)
 
+### **Debug Serial Port Usage Issue**
 
+When using Mobaxterm software or other serial port tools to connect to the serial port, you may find that the serial port displays garbled characters or can only display but cannot be written to.
 
-### **MIPI屏幕无法显示问题**
+**Solution**: This is generally because the debug serial port tool does not support a baud rate of 1500000. It is recommended to use a debug serial port tool that supports a baud rate of 1500000.
 
-若 MIPI 屏幕无法显示，可检测接线是否正确，背光是否正常点亮。
+### **Username and Password Error Issue**
 
-**解决方案**：
+When logging in via ssh, the password is incorrect.
 
-观察背光未点亮，需要检查接线。[MIPI_DSI接线](#MIPIDSI)
-
-观察背光已点亮，需要检查软件。（K7 V1.2 还未支持自动识别 MIPI 屏幕，对应屏幕需要烧录不同的软件）
-
-
-
-### **调试串口使用异常问题**
-
-使用 Mobaxterm 软件或其他串口工具连接串口时，发现串口乱码，或者只能显示无法写入问题。
-
-**解决方案**：一般为调试串口工具不支持 1500000 波特率，建议使用支持 1500000 波特率的调试串口工具。
-
-
-
-### **用户名密码错误问题**
-
-使用 ssh 登陆时，密码错误。
-
-**解决方案**：请确认相关账号是否存在，以及密码是否正确。可使用以下命令修改用户密码：
+**Solution**: Please confirm if the relevant account exists and if the password is correct. You can use the following command to change the user password:
 
 ```
 console$ passwd $username
 ```
 
-示例：
+Example:
 
 ```
 root@kickpi:/# passwd kickpi
@@ -240,29 +197,26 @@ Retype new password:
 passwd: password updated successfully
 ```
 
+### What is the Motherboard Command-Line Console? <a id="console_readme"> </a>
 
+The command-line console generally refers to an operating interface in the documentation that allows users to interact with the computer system through text commands. Users can perform operations (such as file management, program execution, and system configuration) by entering specific instructions, rather than relying on the graphical user interface (GUI) for mouse clicks and visual operations.
 
-### 什么是主板命令行控制台？<a id="console_readme"> </a>
+Examples of command-line consoles:
 
-命令行控制台，文档中泛指可以通过文本命令与计算机系统交互的操作界面。用户通过输入特定指令来执行操作（如文件管理、程序运行、系统配置等），而非依赖图形化界面（GUI）的鼠标点击和可视化操作。
-
-命令行控制台举例：
-
-Android 系统，可以使用串口或adb shell，使用命令行控制台。
+For the Android system, you can use the serial port or adb shell to use the command-line console.
 
 ```
 console$
 ```
 
-Debian 系统，可以使用串口或者adb shell，ssh等方式，使用命令行控制台。
+For the Debian system, you can use the serial port, adb shell, ssh, etc., to use the command-line console.
 
 ```
 root@linaro$
 ```
 
-Ubuntu 系统，可以使用串口或者adb shell，ssh等方式，使用命令行控制台。
+For the Ubuntu system, you can use the serial port, adb shell, ssh, etc., to use the command-line console.
 
 ```
 kickpi@kickpi$
 ```
-
