--- a/rk356x-rk3588/en/02-Getting_Started_Guide/02-K1-快速使用.md
+++ b/rk356x-rk3588/en/02-Getting_Started_Guide/02-K1-快速使用.md
@@ -1,4 +1,4 @@
-# 02 - Quick Start Guide
+# 02-K1-Quick_Start_Guide
 
 This guide is designed to assist users in quickly getting started with the motherboard, covering topics such as powering on the board, connecting a display, using the debug serial port, ADB, and SSH connections.
 
