--- a/rk356x-rk3588/en/04-SDK_Compilation/01-编译环境搭建.md
+++ b/rk356x-rk3588/en/04-SDK_Compilation/01-编译环境搭建.md
@@ -1,24 +1,26 @@
-# 01-编译环境搭建
+# Inputs
+
+## Relevant code snippets from the current codebase
+filePath: 01-Compilation Environment Setup.md
+```
+# 01-Compilation Environment Setup
 
 
+## 1. Compilation Environment Setup
 
+This compilation environment configuration is applicable to Android/Linux SDK.
 
-## 1. 编译环境搭建
+### Hardware Requirements
 
-此编译环境配置 适用 Android/Linux SDK
-
-### 硬件要求
-
-| 系统环境  | 要求        |
+| System Environment | Requirements |
 | --------- | ----------- |
-| 系统版本  | Ubuntu22.04 |
-| CPU核心数 | 4核以上     |
-| 内存容量  | 16GB以上    |
-| 硬盘容量  | 200GB以上   |
+| System Version | Ubuntu 22.04 |
+| Number of CPU Cores | 4 cores or more |
+| Memory Capacity | 16GB or more |
+| Hard Disk Capacity | 200GB or more |
 
 
-
-### 安装依赖软件包
+### Install Dependent Software Packages
 
 ```
 $ sudo apt install git bc bison build-essential curl flex libsdl1.2-dev 
@@ -31,7 +33,8 @@ $ sudo apt install python-pip gawk openjdk-8-jdk u-boot-tools patchelf expect
 $ sudo pip install pyelftools
 ```
 
-> 软件包名称 会根据UBUNTU版本更新而变化
+> The names of software packages may change with the updates of the UBUNTU version.
 >
-> 不同UBUNTU版本安装失败，可网络搜索对应的解决方法
+> If the installation fails on different UBUNTU versions, you can search for corresponding solutions online.
 
+```
