--- a/rk356x-rk3588/en/08-Advanced_Topics/03-固件解包和打包.md
+++ b/rk356x-rk3588/en/08-Advanced_Topics/03-固件解包和打包.md
@@ -1,79 +1,59 @@
-# 03-固件解包和打包
+# 03-Firmware Unpacking and Packing
 
-​	本节主要介绍RK的固件在windows或者linux下进行解包和重新打包的过程。
+This section mainly introduces the process of unpacking and repacking RK firmware on Windows or Linux.
 
 ## Windows
 
-​	待测试完善。
+To be tested and improved.
 
 ## Linux
 
-使用的工具获取：
-
-1.网盘路径：
-
+### Obtaining the tools
+1. Network disk path:
 ```
-rk356x_data\3-SoftwareData软件资料\Linux_Pack_Firmware.zip
+rk356x_data\3-SoftwareData Software Materials\Linux_Pack_Firmware.zip
 ```
-
-2.Linux-SDK源码路径：
-
+2. Linux-SDK source code path:
 ```
 rk356x-linux\tools\linux\Linux_Pack_Firmware
 ```
-
-3.Android-SDK源码路径：
-
+3. Android-SDK source code path:
 ```
 rk-android13.0\RKTools\linux\Linux_Pack_Firmware
 ```
 
-### 解包
-
-1. 将Linux_Pack_Firmware放到你的虚拟机工作目录中
-
+### Unpacking
+1. Place the `Linux_Pack_Firmware` directory in your virtual machine's working directory.
 ```shell
 $ ls Linux_Pack_Firmware/
 rockdev
 ```
-
-2. 将需要解包的固件放置于rockdev目录下，并重命名为：update.img
-
+2. Put the firmware to be unpacked in the `rockdev` directory and rename it to `update.img`.
 ```shell
 $ cd Linux_Pack_Firmware/rockdev
 $ mv update-rk3568-kickpi-k1-linux-debian--20250403-150845.img update.img
 ```
-
-3. 运行脚本进行解包
-
+3. Run the script to unpack the firmware.
 ```shell
 $ ./unpack.sh
 ```
-
-4. 解包出的分镜像等文件位于：
-
+4. The unpacked partition images and other files are located in:
 ```shell
 $ ls output/
 Image  MiniLoaderAll.bin  package-file  parameter.txt
 ```
+> After modifying or replacing the unpacked partition images, you can repack them to generate a new firmware.
 
-> 解包出的分镜像进行修改或替换后就可以进行重新打包生成固件
-
-### 打包
-
-将解包出的镜像修改完成后就可以进行重新打包了。
-
-1. 拷贝文件到rockdev对应路径，删除之前用于解包的update.img镜像
-
+### Packing
+After modifying the unpacked images, you can repack them.
+1. Copy the files to the corresponding paths in the `rockdev` directory and delete the `update.img` used for unpacking.
 ```shell
 $ cp -rf output/* ./ 
 $ mv parameter.txt Image/
 $ mv MiniLoaderAll.bin Image/
 $ rm update.img
 ```
-
-2. 修改package-file文件，将文件路径修改为你对应文件放置的路径
-
+2. Modify the `package-file` to update the file paths to the actual locations of the files.
 ```
 # NAME  PATH
 package-file    package-file
@@ -86,16 +66,11 @@ recovery        Image/recovery.img
 backup  RESERVED
 rootfs  Image/rootfs.img
 ```
-
-3. 运行对应版本脚本进行打包
-
+3. Run the corresponding version script to pack the firmware.
 ```shell
 $ ./rk356x-mkupdate.sh
 ```
-
-4. 打包完成的镜像就位于rockdev目录下：
-
+4. The packed image is located in the `rockdev` directory:
 ```shell
 $ ls update.img
 ```
-
