--- a/rk3576/zh/02-入门必读/03-功能测试.md
+++ b/rk3576/zh/02-入门必读/03-功能测试.md
@@ -596,7 +596,7 @@ console$ cat /sys/devices/platform/*gpu/utilisation
 >
 > $ watch -n 1 'cat /sys/devices/platform/*gpu/utilisation'
 >
-> 移动鼠标或窗口或进行GPU测试，可以查看GPU使⽤率来确定硬加速是否有⽤起来
+> 移动鼠标或拖动窗口，查看 GPU使⽤率来确定硬加速是否作用
 
 **GLmark2 性能测试**
 
