--- a/common/zh/debug/01-常见问题.md
+++ b/common/zh/debug/01-常见问题.md
@@ -1,18 +1,10 @@
-# 01-常见问题
+# 01-日志抓取
 
 SDK - 指代源码路径
 
 console - 指代调试控制台
 
 ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
-
-
-
-## 功能异常问题描述
-
-1. 测试主板型号 + 系统
-2. 测试镜像
-3. 问题出现概率
 
 
 
