--- a/rk356x-rk3588/zh/02-入门必读/02-K8-快速使用.md
+++ b/rk356x-rk3588/zh/02-入门必读/02-K8-快速使用.md
@@ -221,6 +221,25 @@ K8 支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
 
 
 
+### 启动卡在logo界面
+
+1. 固件是否是为提供的固件，确保使用网盘提供的固件，技术支持才能帮助排查问题。
+2. 重启多次，是否每次都这样
+3. 如果是使用的Ubuntu系统有时启动会比较慢，需耐心等待一会，观察是否后续正常进入图形化界面
+4. 上述确定完，依旧卡在logo界面，如下排查
+5. 确认蓝色系统运行灯是否闪烁
+6. 接调试串口，保持所有打印的开机日志，方便提供给技术支持帮助排查问题
+
+
+
+### 系统一直重启
+
+1. 除去所有外设，排除外设干扰
+2. 接串口查看日志进行排查
+3. 尝试更换电源供电，供电不良好会让板子部分功能异常导致重启
+
+
+
 ### **用户名密码错误问题**
 
 使用 ssh 登陆时，密码错误。
