--- a/common/zh/debug/02-板子常见问题.md
+++ b/common/zh/debug/02-板子常见问题.md
@@ -1,100 +1,34 @@
-# 01-日志抓取
+# 常见问题
 
-SDK - 指代源码路径
+## **上电供电问题**
 
-console - 指代调试控制台
+当主板接入较多外设，导致功耗较高时，接入电源后，上电绿灯可能会较暗或不能保持常亮，系统启动也可能出现异常。
 
-ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
-
-
-
-## 内核日志抓取方法
-
-### 通用方法
-
-命令行-调试串口
-
-1. 参考[12-硬件功能测试.md](12-硬件功能测试.md#UART)连接调试串口
-
-1. 内核日志打印命令
-
-   ```shell
-   (console) $ dmesg
-   ```
-
-1. 日志保存
-
-   Windows下各种串口软件都有保存方法，下面只介绍网盘上提供的MobaXterm_Personal_20.3工具的保存方法
-
-   鼠标右键点击对应的窗口，选择保存当前窗口输出
-
-   ![image-20250328102712644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250328102712644.png)
-
-### Linux
-
-命令行-虚拟终端
-
-1. 主板连接显示器、键盘
-
-2. 输入命令打印内核日志
-
-   ```shell
-   (console) $ dmesg
-   ```
-
-3. 将日志保存为文件
-
-      ```shell
-      (console) $ dmesg > dmesg.txt
-      ```
-
-4. 将文件通过U盘拷贝出来
+**解决方案**：这一般是电源供电问题，请检测对应电源的功耗是否足够，能否支持所连接的外设模块供电。
 
 
 
+## **MIPI屏幕无法显示问题**
 
-### Android
+若 MIPI 屏幕无法显示，可检测接线是否正确，背光是否正常点亮。
 
-命令行-ADB
+**解决方案**：
 
-1. 板子开机，电脑连接好板子usb-typeC口
+观察背光未点亮，需要检查接线。[MIPI_DSI接线](#MIPIDSI)
 
-2. 打开Windows的cmd，输入下面命令，确保有设备
-
-   ```
-   (ADB) # adb devices
-   ```
-
-3. 输入命令将内核日志保存到D盘下dmesg.txt
-
-   ```
-   (ADB) # adb shell dmesg > D:/dmesg.txt
-   ```
+观察背光已点亮，需要检查软件。（K7 V1.2 还未支持自动识别 MIPI 屏幕，对应屏幕需要烧录不同的软件）
 
 
 
-Andorid 系统日志
+## **调试串口使用异常问题**
 
-1. 开机，命令进行抓取。
+使用 Mobaxterm 软件或其他串口工具连接串口时，发现串口乱码，或者只能显示无法写入问题。
 
-```
-(ADB) # adb logcat > D:/logcat.txt
-```
-
-2. 复现问题。
-
-3. Ctrl + C 停止
-4. 提供logcat.txt
+**解决方案**：一般为调试串口工具不支持 1500000 波特率，建议使用支持 1500000 波特率的调试串口工具。
 
 
 
-
-
-## 常见问题排查
-
-​	以下常见问题请确保烧录的固件为网盘提供的固件，技术支持才能同步帮你排查。
-
-### 启动卡在logo界面
+## 启动卡在logo界面
 
 1. 固件是否是为提供的固件，确保使用网盘提供的固件，技术支持才能帮助排查问题。
 2. 重启多次，是否每次都这样
@@ -103,15 +37,33 @@ Andorid 系统日志
 5. 确认蓝色系统运行灯是否闪烁
 6. 接调试串口，保持所有打印的开机日志，方便提供给技术支持帮助排查问题
 
-### 串口打印问题
 
-如没有打印或者打印乱码
 
-1. 检查接线是正确，参考[12-硬件功能测试.md](12-硬件功能测试.md#UART)连接调试串口
-2. 使用的串口工具是否是我们家的，不是请确保能支持波特率1500000
-
-### 系统一直重启
+## 系统一直重启
 
 1. 除去所有外设，排除外设干扰
 2. 接串口查看日志进行排查
 3. 尝试更换电源供电，供电不良好会让板子部分功能异常导致重启
+
+
+
+## **用户名密码错误问题**
+
+使用 ssh 登陆时，密码错误。
+
+**解决方案**：请确认相关账号是否存在，以及密码是否正确。可使用以下命令修改用户密码：
+
+```
+console$ passwd $username
+```
+
+示例：
+
+```
+root@kickpi:/# passwd kickpi
+New password:
+Retype new password:
+passwd: password updated successfully
+```
+
+
