--- a/rk356x-rk3588/zh/02-入门必读/04-扩展引脚.md
+++ b/rk356x-rk3588/zh/02-入门必读/04-扩展引脚.md
@@ -159,7 +159,7 @@ $ find /sys/devices/ | grep pwmchip | grep uevent
 
 ## ADC
 
-主板扩展引脚配备DC，通过[扩展引脚章节](#ExpansionPin-K7)查看对应的 ADC 位置及通道号。
+主板扩展引脚配备DC，通过[扩展引脚章节](#ExpansionPin)查看对应的 ADC 位置及通道号。
 
 下面以 SARADC_VIN3 进行示例说明。
 
