--- a/rk356x-rk3588/zh/02-入门必读/03-功能测试.md
+++ b/rk356x-rk3588/zh/02-入门必读/03-功能测试.md
@@ -65,7 +65,7 @@ Android系统一般通过图形化界面测试
 
 ![image-20250427115144556](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250427115144556.png)
 
-等扫描结果出来后，会出现扫描到的设置
+等扫描结果出来后，会出现扫描到的设备
 
 ![image-20250427115405365](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250427115405365.png)
 
