--- a/rk3576/zh/02-入门必读/01-网盘目录说明.md
+++ b/rk3576/zh/02-入门必读/01-网盘目录说明.md
@@ -14,7 +14,7 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 
 ```
 ├── 0-Specifications
-│   └── KICKPI K7 产品规格书.pdf
+│   └── KICKPI_K7_Product_Specification_CN.pdf
 ├── 1-SDK
 │   └── README.txt
 ├── 2-Image
@@ -23,20 +23,24 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 │   ├── Ubuntu2404
 │   └── UPDATE_LOG.txt
 ├── 3-SoftwareData
-│   ├── Linux_Pack_Firmware.zip
+│   ├── Android_app_signkey
+│   ├── Linux_backup_rootfs_script
+│   ├── Linux_rkllm_deepseek
+│   ├── Linux_rknn_yolov5
+│   ├── Linux_spi_tool
 │   ├── readme.txt
-│   ├── rk35xx-rkllm-deepseek.tar.gz
-│   ├── rknn_yolov5_demo_Linux_rk3576.zip
-│   └── yolov5_test.h264
+│   └── Rockchip_pack_firmware_tool
 ├── 4-HardwareData
+│   ├── K7_PCB_Dimension_Drawing.pdf
 │   └── K7_V1.1_20241211_SCH.pdf
 └── 5-DevelopmentTool
-    ├── ADB Scrcpy
-    ├── ADB Tool
-    ├── FactoryTool
-    ├── UART DebugTool
-    ├── USB Driver
-    └── USB ImageBurnTool
+    ├── win_x64_ADB_Tool
+    ├── win_x64_FactoryTool
+    ├── win_x64_QtScrcpy
+    ├── win_x64_SDDiskTool
+    ├── win_x64_UartDebugTool
+    ├── win_x64_UsbDriver
+    └── win_x64_UsbImageBurnTool
 ```
 
 
@@ -79,9 +83,6 @@ RK3576 SDK暂不开放
 
 **5-DevelopmentTool**
 
-烧录调试相关工具，如烧录软件、ADB软件等。
-
-
-
+烧录调试相关开发工具，如烧录软件、ADB软件等。
 
 
