--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -50,6 +50,16 @@ cat /dev/ttyAS5
 
 ### WiringKP工具使用
 
+查看系统是否有WiringKP工具
+
+``` shell
+which gpio
+```
+
+![image-20250514102207335](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514102207335.png)
+
+如果没有就从网盘下载拷贝到板卡系统中
+
 工具下载网盘地址路径
 
 h618_data\3-SoftwareData软件资料\GPIO_tools
