--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -62,7 +62,7 @@ which gpio
 
 工具下载网盘地址路径
 
-h618_data\3-SoftwareData软件资料\GPIO_tools
+h618_data\3-SoftwareData\GPIO_tools
 
 将wiringKP.tar.gz在板卡上解压
 
