--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -68,6 +68,10 @@ h618_data\3-SoftwareData\GPIO_tools
 
 可执行文件和库文件分别放到/usr/bin和/usr/lib目录下
 
+使用演示
+
+以下演示以K2B为例
+
 ``` shell
 gpio readall //获取所有管脚状态
 ```
@@ -80,7 +84,7 @@ gpio mode <wPi> <mode> //设置管脚工作模式 (当前版本支持设置out/i
 gpio write <wPi> <val> //设置管脚输出电平
 ```
 
-使用演示
+
 
 设置PH5为输出模式，输出高电平
 
