--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -84,7 +84,7 @@ gpio mode <wPi> <mode> //设置管脚工作模式 (当前版本支持设置out/i
 gpio write <wPi> <val> //设置管脚输出电平
 ```
 
-设置PH5为输出模式，输出高电平
+**设置PH5为输出模式，输出高电平**
 
 其中PC管脚输出电压为1.8V，PH管脚输出电压为3.3V
 
@@ -100,7 +100,7 @@ kickpi@kickpi:~$
 
 可使用万用表测得此时PH5管脚为高电平
 
-设置PH5为输入模式
+**设置PH5为输入模式**
 
 ``` shell
 kickpi@kickpi:~$ gpio mode 0 in
@@ -111,6 +111,11 @@ kickpi@kickpi:~$//短接管脚3和管脚4
 kickpi@kickpi:~$ gpio read 0
 1
 kickpi@kickpi:~$
+```
+
+设置PH为PWM模式
+
+``` 
 ```
 
 
