--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -1,5 +1,21 @@
 # 04-扩展引脚
 
+## 扩展引脚
+
+开发板板载扩展引脚功能
+
+* 可用于连接外部设备（温度传感器、湿度传感器等）
+* 与其他电路板或模块通信（I2C、SPI、UART等）
+* 自定义GPIO功能
+
+具体功能拓展详情查看引脚列表。
+
+引脚列表标注了每个引脚的默认配置（带*号），同时给出该引脚所对应的可选择配置。
+
+
+
+
+
 
 
 ## 串口
