--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -12,9 +12,13 @@
 
 引脚列表标注了每个引脚的默认配置（带*号），同时给出该引脚所对应的可选择配置。
 
+**K2B扩展引脚**
 
+![image-20250514100544929](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514100544929.png)
 
+**K2C扩展引脚**
 
+![image-20250514101010786](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514101010786.png)
 
 
 
