--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -87,12 +87,17 @@ kickpi@kickpi:~$ gpio read 0
 kickpi@kickpi:~$
 ```
 
-设置PH为PWM模式
+**设置PH2为PWM模式**
 
-``` 
+``` shell
+root@kickpi:~# gpio mode 3 pwm #默认输出频率23475Hz 占空比50%的方波
 ```
 
+PWM占空比 = CCR/ARR
 
+CCR范围0~65535 默认512
+
+ARR范围1~65536 默认1024
 
 ### sys gpio控制
 
