--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -56,6 +56,8 @@ gpio readall //获取所有管脚状态
 gpio read <wPi>        //读管脚电平
 gpio mode <wPi> <mode> //设置管脚工作模式 (当前版本支持设置out/int/up/down/pwm 模式)
 gpio write <wPi> <val> //设置管脚输出电平
+gpio pwmr <wPi> <val>  //设置ARR
+gpio pwm <wPi> <val>   //设置CCR
 ```
 
 **设置PH5为输出模式，输出高电平**
@@ -98,6 +100,19 @@ PWM占空比 = CCR/ARR
 CCR范围0~65535 默认512
 
 ARR范围1~65536 默认1024
+
+``` 
+设置ARR
+gpio pwmr 3 2048
+设置CCR
+gpio pwm 3 1024
+```
+
+
+
+
+
+
 
 ### sys gpio控制
 
