--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -56,6 +56,8 @@ gpio readall //获取所有管脚状态
 gpio read <wPi>        //读管脚电平
 gpio mode <wPi> <mode> //设置管脚工作模式 (当前版本支持设置out/int/up/down/pwm 模式)
 gpio write <wPi> <val> //设置管脚输出电平
+
+pwm相关命令
 gpio pwmr <wPi> <val>  //设置ARR
 gpio pwm <wPi> <val>   //设置CCR
 ```
