--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -60,6 +60,7 @@ gpio write <wPi> <val> //设置管脚输出电平
 pwm相关命令
 gpio pwmr <wPi> <val>  //设置ARR
 gpio pwm <wPi> <val>   //设置CCR
+gpio pwmc <wPi> <val>  //设置分频系数
 ```
 
 **设置PH5为输出模式，输出高电平**
