--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -99,20 +99,25 @@ kickpi@kickpi:~$
 root@kickpi:~# gpio mode 3 pwm #默认输出频率23475Hz 占空比50%的方波
 ```
 
+![image-20250514115200103](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115200103.png)
+
+
+
 PWM占空比 = CCR/ARR
 
 CCR范围0~65535 默认512
 
 ARR范围1~65536 默认1024
 
-``` 
-设置ARR
-gpio pwmr 3 2048
-设置CCR
-gpio pwm 3 1024
+``` shell
+gpio pwmr 3 2048 //设置ARR为2048
 ```
 
+![image-20250514115347443](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115347443.png)
 
+``` 
+gpio pwm 3 1024 //设置CCR为1024
+```
 
 
 
