--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -101,7 +101,7 @@ root@kickpi:~# gpio mode 3 pwm #默认输出频率23475Hz 占空比50%的方波
 
 ![image-20250514115200103](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115200103.png)
 
-
+**调节占空比**
 
 PWM占空比 = CCR/ARR
 
@@ -119,7 +119,7 @@ gpio pwmr 3 2048 //设置ARR为2048
 gpio pwm 3 1024 //设置CCR为1024
 ```
 
-
+![image-20250514115517926](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115517926.png)
 
 
 
