--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -121,6 +121,10 @@ gpio pwm 3 1024 //设置CCR为1024
 
 ![image-20250514115517926](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115517926.png)
 
+**调节频率**
+
+
+
 
 
 ### sys gpio控制
