--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -123,7 +123,12 @@ gpio pwm 3 1024 //设置CCR为1024
 
 **调节频率**
 
+``` 
+gpio mode 3 pwm
+gpio pwmc 3 5
+```
 
+![image-20250514115800211](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115800211.png)
 
 
 
