--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -115,7 +115,7 @@ gpio pwmr 3 2048 //设置ARR为2048
 
 ![image-20250514115347443](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115347443.png)
 
-``` 
+``` shell
 gpio pwm 3 1024 //设置CCR为1024
 ```
 
@@ -123,14 +123,18 @@ gpio pwm 3 1024 //设置CCR为1024
 
 **调节频率**
 
-``` 
+``` shell
 gpio mode 3 pwm
 gpio pwmc 3 5
 ```
 
 ![image-20250514115800211](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115800211.png)
 
+``` shell
+gpio pwmTone 3 2000
+```
 
+![image-20250514115920195](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115920195.png)
 
 ### sys gpio控制
 
