--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -124,8 +124,8 @@ gpio pwm 3 1024 //设置CCR为1024
 **调节频率**
 
 ``` shell
-gpio mode 3 pwm
-gpio pwmc 3 5
+gpio mode 3 pwm //默认输出频率为23475Hz
+gpio pwmc 3 5   //设置分频系数为5 则输出频率为23475/5=4695Hz，实际频率为4688Hz 误差可忽略
 ```
 
 ![image-20250514115800211](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115800211.png)
