--- a/h618/zh/02-入门必读/04-扩展引脚.md
+++ b/h618/zh/02-入门必读/04-扩展引脚.md
@@ -110,13 +110,13 @@ CCR范围0~65535 默认512
 ARR范围1~65536 默认1024
 
 ``` shell
-gpio pwmr 3 2048 //设置ARR为2048
+gpio pwmr 3 2048 //设置ARR为2048 占空比为512/2048=25%
 ```
 
 ![image-20250514115347443](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115347443.png)
 
 ``` shell
-gpio pwm 3 1024 //设置CCR为1024
+gpio pwm 3 1024 //设置CCR为1024 占空比为1024/2048=50%
 ```
 
 ![image-20250514115517926](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250514115517926.png)
