--- a/h618/zh/02-入门必读/02-快速使用.md
+++ b/h618/zh/02-入门必读/02-快速使用.md
@@ -13,13 +13,13 @@
 K2B 支持TYPE-C 5V 供电，如下图所示：
 
 
-![image-20250426165041732](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426165041732.png)
+![TYPE-C 5V](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426165041732.png)
 
 **K2C**
 
 K2B 支持DC 12V 供电，如下图所示：
 
-![image-20250426165015167](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426165015167.png)
+![DC 12V](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426165015167.png)
 
 ### LED状态
 
