--- a/h618/zh/02-入门必读/02-快速使用.md
+++ b/h618/zh/02-入门必读/02-快速使用.md
@@ -37,7 +37,7 @@ K2B 支持DC 12V 供电，如下图所示：
 
 主板支持HDMI显示
 
-![image-20250426171612371](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426171612371.png)
+![HDMI](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426171612371.png)
 
 
 
@@ -58,7 +58,7 @@ K2B 支持DC 12V 供电，如下图所示：
 
 其他调试工具线的连接方式同理，只需连接 TX、RX、GND 即可，且调试工具需支持 115200波特率才能正常通信。调试串口线详情见下图：
 
-![image-20241231145656021](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231145656021.png)
+![Serial port cable](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231145656021.png)
 
 ### 板卡DEBUG引脚
 
