--- a/h618/zh/02-入门必读/02-快速使用.md
+++ b/h618/zh/02-入门必读/02-快速使用.md
@@ -64,7 +64,7 @@ K2B 支持DC 12V 供电，如下图所示：
 
 **K2B**
 
-![image-20250426173419507](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173419507.png)
+![K2B DEBUG PORT](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173419507.png)
 
 ![image-20250426173855683](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173855683.png)
 
