--- a/h618/zh/02-入门必读/02-快速使用.md
+++ b/h618/zh/02-入门必读/02-快速使用.md
@@ -66,15 +66,15 @@ K2B 支持DC 12V 供电，如下图所示：
 
 ![K2B DEBUG PORT](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173419507.png)
 
-![image-20250426173855683](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173855683.png)
+![K2B DEBUG PORT](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173855683.png)
 
 
 
 **K2C**
 
-![image-20250426173450995](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173450995.png)
+![K2C DEBUG PORT](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173450995.png)
 
-![image-20250426173834282](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173834282.png)
+![K2C DEBUG PORT](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173834282.png)
 
 ### 接线方法
 
