--- a/rk3576/zh/02-入门必读/02-快速使用.md
+++ b/rk3576/zh/02-入门必读/02-快速使用.md
@@ -168,7 +168,7 @@ K7 支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.m
 
 ## SSH
 
-K7 支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
+K7 Debian/Ubuntu 系统支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
 
 
 
