--- a/rk3576/zh/02-入门必读/02-快速使用.md
+++ b/rk3576/zh/02-入门必读/02-快速使用.md
@@ -162,13 +162,13 @@ MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接
 
 ## ADB
 
-K7 Android/Debian/Ubuntu 系统支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
+K7 `Android/Debian/Ubuntu` 系统支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
 
 
 
 ## SSH
 
-K7 Debian/Ubuntu 系统支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
+K7 `Debian/Ubuntu` 系统支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
 
 
 
