--- a/rk3576/zh/03-镜像烧录/01-获取镜像文件.md
+++ b/rk3576/zh/03-镜像烧录/01-获取镜像文件.md
@@ -9,34 +9,32 @@ SDK编译详细步骤参考文档 [LINUX_SDK源码编译](../04-SDK编译/02-LIN
 ## 网盘目录
 
 ```
-├── 0-Specifications
-│   └── KICKPI_K7_Product_Specification_CN.pdf
-├── 1-SDK
-│   └── README.txt
-├── 2-Image
-│   ├── Android14
-│   ├── Debian12
-│   ├── Ubuntu2404
-│   └── UPDATE_LOG.txt
-├── 3-SoftwareData
-│   ├── Android_app_signkey
-│   ├── Linux_backup_rootfs_script
-│   ├── Linux_rkllm_deepseek
-│   ├── Linux_rknn_yolov5
-│   ├── Linux_spi_tool
-│   ├── readme.txt
-│   └── Rockchip_pack_firmware_tool
-├── 4-HardwareData
-│   ├── K7_PCB_Dimension_Drawing.pdf
-│   └── K7_V1.1_20241211_SCH.pdf
-└── 5-DevelopmentTool
-    ├── win_x64_ADB_Tool
-    ├── win_x64_FactoryTool
-    ├── win_x64_QtScrcpy
-    ├── win_x64_SDDiskTool
-    ├── win_x64_UartDebugTool
-    ├── win_x64_UsbDriver
-    └── win_x64_UsbImageBurnTool
+2-Image/
+├── Android14
+│   ├── boot
+│   │   └── 20250414
+│   │       ├── boot-10.1-MX101BA1340.img
+│   │       ├── boot-5-F050008M01.img
+│   │       ├── boot-8-MX080B2140.img
+│   │       └── parameter.txt
+│   ├── update-rk3576-kickpi-k7-android-10.1-AT101DS40I-202504171511.img
+│   ├── update-rk3576-kickpi-k7-android-10.1-MX101BA1340-202504171555.img
+│   ├── update-rk3576-kickpi-k7-android-5-F050008M01-202504171536.img
+│   ├── update-rk3576-kickpi-k7-android-8-MX080B2140-202504171436.img
+│   └── update-rk3576-kickpi-k7-android-HDMI-202504171451.img
+├── Debian12
+│   ├── update-rk3576-kickpi-k7-linux-debian-10.1-AT101DS40I-20250417-110424.img
+│   ├── update-rk3576-kickpi-k7-linux-debian-10.1-MX101BA1340-20250417-114626.img
+│   ├── update-rk3576-kickpi-k7-linux-debian-5-F050008M01-20250417-111519.img
+│   ├── update-rk3576-kickpi-k7-linux-debian-8-MX080B2140-20250417-113537.img
+│   └── update-rk3576-kickpi-k7-linux-debian-HDMI-20250417-115658.img
+├── Ubuntu2404
+│   ├── update-rk3576-kickpi-k7-linux-ubuntu-10.1-AT101DS40I20250417-104317.img
+│   ├── update-rk3576-kickpi-k7-linux-ubuntu-10.1-MX101BA1340-20250417-093953.img
+│   ├── update-rk3576-kickpi-k7-linux-ubuntu-5-F050008M01-20250417-102300.img
+│   ├── update-rk3576-kickpi-k7-linux-ubuntu-8-MX080B2140-20250417-100614.img
+│   └── update-rk3576-kickpi-k7-linux-ubuntu-HDMI-20250417-092759.img
+└── UPDATE_LOG.txt
 ```
 
 
