--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -26,9 +26,18 @@ K5C 支持DC 12V 供电，如下图所示：
 
 ## 显示屏
 
-主板支持HDMI显示
+主板LVDS屏幕和MIPI屏幕 
 
+**注意事项**
 
+接入屏幕之前，务必主板断电。
 
+适配以下 MIPI 屏：
 
+| **型号**    | **尺寸**  | **分辨率** | 触摸支持 |
+| ----------- | --------- | ---------- | -------- |
+| AT101DS40I  | 10.1-inch | 800x1280   | Y        |
+| MX101BA1340 | 10.1-inch | 800x1280   | Y        |
+| MX080B2140  | 8.0-inch  | 800x1280   | Y        |
+| F050008M01  | 5.0-inch  | 720x1280   | Y        |
 
