--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -41,3 +41,6 @@ K5C 支持DC 12V 供电，如下图所示：
 | MX080B2140  | 8.0-inch  | 800x1280   | Y        |
 | F050008M01  | 5.0-inch  | 720x1280   | Y        |
 
+**硬件接线**
+
+MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接入 MIPI DSI 接口。具体接线图如下：
