--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -6,13 +6,20 @@
 
 ### 供电方式
 
-**K5C**
+K5C 主板支持多种供电方式，注意硬件版本是否支持。
 
-K5C 支持DC 12V 供电，如下图所示：
+| 供电方式 | 供电电压 | 主板版本 |
+| -------- | -------- | -------- |
+| DC       | 12V      | >= V1.0  |
+| Type-C   | 5V       | >= V1.1  |
+| POE      | 12V      | >= V1.0  |
+| BAT      | > 3.7V   | >= V1.2  |
+
+**DC供电**
 
 ![image-20250322093752078](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250322093752078.png)![image-20250322093804013](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250322093804013.png)
 
-若使用21寸LVDS屏幕，需使用12V_5A适配器。
+其他供电详细见[K5C主板供电](..\08-进阶\K5C主板供电.md)
 
 ### LED状态
 
@@ -26,7 +33,7 @@ K5C 支持DC 12V 供电，如下图所示：
 
 ## 显示屏
 
-主板LVDS屏幕和MIPI屏幕 
+主板支持LVDS屏幕和MIPI屏幕 
 
 **注意事项**
 
@@ -43,4 +50,4 @@ K5C 支持DC 12V 供电，如下图所示：
 
 **硬件接线**
 
-MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接入 MIPI DSI 接口。具体接线图如下：
+MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接入 LVDS_LCD 接口。具体接线图如下：
