--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -53,3 +53,30 @@ K5C 主板支持多种供电方式，注意硬件版本是否支持。
 MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接入 LVDS_LCD 接口。具体接线图如下：
 
 ![image-20250515104101028](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250515104101028.png)
+
+## 调试串口
+### 波特率
+
+调试串口的波特率需设置为 115000。
+
+### 调试串口线说明
+
+目前提供的调试串口线共有四根线，各线功能如下：
+
+- 红色：VCC（不需要连接）
+- 绿色：TX
+- 白色：RX
+- 黑色：GND
+
+其他调试工具线的连接方式同理，只需连接 TX、RX、GND 即可，且调试工具需支持 115200波特率才能正常通信。调试串口线详情见下图：
+
+![Serial port cable](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231145656021.png)
+
+### 板卡DEBUG引脚
+
+**K2B**
+
+## ADB
+
+## SSH
+
