--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -74,7 +74,15 @@ MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接
 
 ### 板卡DEBUG引脚
 
-**K2B**
+**K5C**
+
+
+
+![image-20250515104514334](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250515104514334.png)
+
+接线方法
+
+![image-20250515105006940](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250515105006940.png)
 
 ## ADB
 
