--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -88,7 +88,7 @@ MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接
 
 ADB（Android Debug Bridge）是安卓系统开发调试桥接工具，支持通过 USB 或网络连接设备，可实现应用安装、文件传输、命令执行等设备管理与调试操作。
 
-支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
+安卓系统支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
 
 ## SSH
 
