--- a/h618/zh/02-入门必读/02-快速使用.md
+++ b/h618/zh/02-入门必读/02-快速使用.md
@@ -120,7 +120,7 @@ h618_data\5-DevelopmentTools\UART_DebugTool\MobaXterm_Portable_v20.3.zip
 
 ADB（Android Debug Bridge）是安卓系统开发调试桥接工具，支持通过 USB 或网络连接设备，可实现应用安装、文件传输、命令执行等设备管理与调试操作。
 
-支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
+安卓系统支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
 
 ### 调试线与接口
 
@@ -225,5 +225,4 @@ ssh kickpi@<ip>
 当主板接入较多外设，导致功耗较高时，接入电源后，上电绿灯可能会较暗或不能保持常亮，系统启动也可能出现异常。
 
 **解决方案**：这一般是电源供电问题，请检测对应电源的功耗是否足够，能否支持所连接的外设模块供电。
-
 
