--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -92,3 +92,52 @@ ADB（Android Debug Bridge）是安卓系统开发调试桥接工具，支持通
 
 ## SSH
 
+SSH（Secure Shell）是一种[网络协议](https://so.csdn.net/so/search?q=网络协议&spm=1001.2101.3001.7020)，用于在不安全的网络上建立安全的远程连接。它提供了加密和身份验证机制，以确保数据的保密性和完整性。通过SSH，用户可以安全地管理远程服务器、传输文件和访问远程资源。
+
+板卡连接网络，通过串口或路由器后台查看板卡IP
+
+**开发板启动后查看IP地址有三种方法：**
+
+1. **接HDMI显示器，然后登录系统使用ifconfig eth0命令查看IP地址**
+2. **在调试串口终端输入ifconifg eth0命令来查看IP地址**
+3. **如果没有调试串口，也没有HDMI显示器，还可以通过路由器的管理界面来查看开发板网口的IP地址。不过这种方法经常有人会无法正常看到开发板的IP地址。如果看不到，调试方法如下所示：**
+
+4. **首先检查Linux系统是否已经正常启动，如果开发板的蓝灯闪烁了，一般是正常启动了，否则说明系统都没正常启动；**
+5. **检查网线有没有插紧，或者换根网线试下；**
+6. **换个路由器试下（路由器的问题有遇到过很多，比如路由器无法正常分配IP地址，或者已正常分配IP地址但在路由器中看不到）；**
+7. **如果没有路由器可换就只能连接HDMI显示器或者使用调试串口来查看IP地址。**
+
+**另外需要注意的是开发板DHCP自动分配IP地址是不需要任何设置的。**
+
+支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
+
+### 用户信息
+
+默认用户名和密码如下：
+
+| 系统   | 用户名 | 密码   |
+| ------ | ------ | ------ |
+| Ubuntu | kickpi | kickpi |
+| Ubuntu | root   | root   |
+
+``` shell
+ssh kickpi@<ip>
+密码kickpi
+```
+
+**注意事项**
+
+- 确保主板网络连接正常。
+- 确保电脑能够正常 ping 通主板的 IP 地址。
+- 确保输入的用户名和密码存在且正确。
+
+![image-20250411103217477](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250411103217477.png)
+
+## 常见问题
+
+### 上电供电问题
+
+当主板接入较多外设，导致功耗较高时，接入电源后，上电绿灯可能会较暗或不能保持常亮，系统启动也可能出现异常。
+
+**解决方案**：这一般是电源供电问题，请检测对应电源的功耗是否足够，能否支持所连接的外设模块供电。
+
