--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -50,6 +50,15 @@ K5C 主板支持多种供电方式，注意硬件版本是否支持。
 | MX080B2140  | 8.0-inch  | 800x1280   | Y        |
 | F050008M01  | 5.0-inch  | 720x1280   | Y        |
 
+适配以下LVDS屏：
+
+| **型号**    | **尺寸**  | **分辨率** | 触摸支持 |
+| ----------- | --------- | ---------- | -------- |
+| MX070IBC    | 7.0-inch  | 1024x600   | Y        |
+
+
+
+
 **硬件接线**
 
 MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接入 LVDS_LCD 接口。具体接线图如下：
