--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -55,6 +55,7 @@ K5C 主板支持多种供电方式，注意硬件版本是否支持。
 | **型号**    | **尺寸**  | **分辨率** | 触摸支持 |
 | ----------- | --------- | ---------- | -------- |
 | MX070IBC    | 7.0-inch  | 1024x600   | Y        |
+| MX070IBC    | 2.0-inch  | 1920x1080   | Y        |
 
 
 
