--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -52,10 +52,10 @@ K5C 主板支持多种供电方式，注意硬件版本是否支持。
 
 适配以下LVDS分辨率：
 
-| **尺寸**  | **分辨率** |
-| --------- | ---------- |
-| 7.0-inch  | 1024x600   |
-| 21.0-inch | 1920x1080  |
+| **尺寸**  | **分辨率** | 触摸支持 |
+| --------- | ---------- | -------- |
+| 7.0-inch  | 1024x600   | Y        |
+| 21.0-inch | 1920x1080  | N        |
 
 
 
