--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -57,11 +57,15 @@ K5C 主板支持多种供电方式，注意硬件版本是否支持。
 | 1024x600   | Y        |
 | 1920x1080  | N        |
 
+我们售卖的7寸LVDS屏幕
+
+型号：MX070IBC
+
 
 
 **硬件接线**
 
-MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接入 LVDS_LCD 接口。具体接线图如下：
+屏幕FPC排线连接时，需确保蓝色面朝上，白色面朝下，然后接入 LVDS_LCD 接口。具体接线图如下：
 
 ![image-20250515104101028](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250515104101028.png)
 
