--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -113,9 +113,9 @@ SSH（Secure Shell）是一种[网络协议](https://so.csdn.net/so/search?q=网
 
 **开发板启动后查看IP地址有三种方法：**
 
-1. **接HDMI显示器，然后登录系统使用ifconfig eth0命令查看IP地址**
+1. **接显示屏，然后登录系统使用ifconfig eth0命令查看IP地址**
 2. **在调试串口终端输入ifconifg eth0命令来查看IP地址**
-3. **如果没有调试串口，也没有HDMI显示器，还可以通过路由器的管理界面来查看开发板网口的IP地址。不过这种方法经常有人会无法正常看到开发板的IP地址。如果看不到，调试方法如下所示：**
+3. **如果没有调试串口，也没有屏幕，还可以通过路由器的管理界面来查看开发板网口的IP地址。不过这种方法经常有人会无法正常看到开发板的IP地址。如果看不到，调试方法如下所示：**
 
 4. **首先检查Linux系统是否已经正常启动，如果开发板的蓝灯闪烁了，一般是正常启动了，否则说明系统都没正常启动；**
 5. **检查网线有没有插紧，或者换根网线试下；**
