--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -120,7 +120,7 @@ SSH（Secure Shell）是一种[网络协议](https://so.csdn.net/so/search?q=网
 4. **首先检查Linux系统是否已经正常启动，如果开发板的蓝灯闪烁了，一般是正常启动了，否则说明系统都没正常启动；**
 5. **检查网线有没有插紧，或者换根网线试下；**
 6. **换个路由器试下（路由器的问题有遇到过很多，比如路由器无法正常分配IP地址，或者已正常分配IP地址但在路由器中看不到）；**
-7. **如果没有路由器可换就只能连接HDMI显示器或者使用调试串口来查看IP地址。**
+7. **如果没有路由器可换就只能连接屏幕或者使用调试串口来查看IP地址。**
 
 **另外需要注意的是开发板DHCP自动分配IP地址是不需要任何设置的。**
 
