--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -99,6 +99,30 @@ K5C 主板支持多种供电方式，注意硬件版本是否支持。
 
 ![image-20250515105006940](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250515105006940.png)
 
+### 串口助手软件下载与使用
+
+**下载串口助手软件**
+
+串口助手软件 可自行下载，下面以Mobaxterm为例
+
+网盘路径：
+
+``` 
+h618_data\5-DevelopmentTools\UART_DebugTool\MobaXterm_Portable_v20.3.zip
+```
+
+软件官网下载：https://mobaxterm.mobatek.net/
+
+**Mobaxterm操作步骤**
+
+1. 新建会话窗口
+2. 选择会话窗口类型为serial
+3. 选择串口COM编号（打开Windows系统 设备管理器 -> 端口界面可查看COM编号）
+4. 选择串口波特率 **115200**
+5. 启动会话窗口
+
+![image-20250509173628697](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509173628697.png)
+
 ## ADB
 
 ADB（Android Debug Bridge）是安卓系统开发调试桥接工具，支持通过 USB 或网络连接设备，可实现应用安装、文件传输、命令执行等设备管理与调试操作。
