--- a/a133/zh/02-入门必读/02-快速使用.md
+++ b/a133/zh/02-入门必读/02-快速使用.md
@@ -150,7 +150,7 @@ SSH（Secure Shell）是一种[网络协议](https://so.csdn.net/so/search?q=网
 
 支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
 
-
+![image-20250411103217477](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250411103217477.png)
 
 ## 常见问题
 
