--- a/h618/zh/02-入门必读/03-功能测试.md
+++ b/h618/zh/02-入门必读/03-功能测试.md
@@ -16,7 +16,7 @@
 
 ![image-20250427144337458](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250427144337458.png)
 
-​									左边网口灯亮说明是100M连接,右边网口灯亮说明是1000M连接
+左边网口灯亮说明是100M连接,右边网口灯亮说明是1000M连接
 
 **K2C：100M网口**
 
