--- a/h618/zh/02-入门必读/02-快速使用.md
+++ b/h618/zh/02-入门必读/02-快速使用.md
@@ -175,7 +175,7 @@ Installed as D:\ADB Tool\adb-tools\adb.exe
 
 ## SSH
 
-SSH（Secure Shell）是一种[网络协议](https://so.csdn.net/so/search?q=网络协议&spm=1001.2101.3001.7020)，用于在不安全的网络上建立安全的远程连接。它提供了加密和身份验证机制，以确保数据的保密性和完整性。通过SSH，用户可以安全地管理远程服务器、传输文件和访问远程资源。
+SSH（Secure Shell）是一种网络协议，用于在不安全的网络上建立安全的远程连接。它提供了加密和身份验证机制，以确保数据的保密性和完整性。通过SSH，用户可以安全地管理远程服务器、传输文件和访问远程资源。
 
 板卡连接网络，通过串口或路由器后台查看板卡IP
 
