--- a/a133/zh/02-入门必读/03-功能测试.md
+++ b/a133/zh/02-入门必读/03-功能测试.md
@@ -15,7 +15,7 @@
 
 若想要实现命令控制LED状态的话，可通过以下命令设置为none，然后再设置LED的brightness
 
-```
+```shell
 $ echo none > /sys/class/leds/sysled/trigger
 $ echo 1 > /sys/class/leds/sysled/brightness
 $ echo 0 > /sys/class/leds/sysled/brightness
@@ -30,16 +30,26 @@ $ echo 0 > /sys/class/leds/sysled/brightness
 **注册结点后**
 
 ```
-$ ls dev/tty*
+$ ls dev/ttyS*
+```
+
+ttyS0<-> DEBUG_UART0
+
+ttyS2<->UART2
+
+ttyS7<->UART7
+
+设置波特率
+
+``` 
+stty -F /dev/ttyS1 ispeed 115200 ospeed 115200 cs8
 ```
 
 
 
-可以使用 microcom 进行测试拓展 UART2
+可以使用 进行测试拓展 UART2
 
-```
-microcom -s 115200 /dev/ttyS2
-```
+
 
 
 
