--- a/a133/zh/02-入门必读/04-扩展引脚.md
+++ b/a133/zh/02-入门必读/04-扩展引脚.md
@@ -16,6 +16,32 @@
 
 
 
+## 串口
+
+**注册结点后**
+
+```
+$ ls dev/ttyS*
+```
+
+ttyS0<-> DEBUG_UART0
+
+ttyS2<->UART2
+
+ttyS7<->UART7
+
+设置波特率
+
+``` 
+stty -F /dev/ttyS2 ispeed 115200 ospeed 115200 cs8
+```
+
+
+
+可以使用 进行测试拓展 UART2
+
+
+
 
 
 ## GPIO
