--- a/a133/zh/02-入门必读/04-扩展引脚.md
+++ b/a133/zh/02-入门必读/04-扩展引脚.md
@@ -36,9 +36,19 @@ ttyS7<->S_UART
 stty -F /dev/ttyS2 ispeed 115200 ospeed 115200 cs8
 ```
 
+向串口发送数据
+
+``` shell
+echo kickpi > /dev/ttyAS2
+```
+
+接收数据
+
+``` shell
+cat /dev/ttyAS2 
+```
 
 
-可以使用 进行测试拓展 UART2
 
 
 
