--- a/a133/zh/02-入门必读/03-功能测试.md
+++ b/a133/zh/02-入门必读/03-功能测试.md
@@ -27,7 +27,28 @@ $ echo 0 > /sys/class/leds/sysled/brightness
 
 K5 开发板 配备 AW859A高性能WIFI模块
 
-支持2.4G/5G双频段，WIFI5，1T1R，BT5.0
+**WIFI**
+
+``` shell
+查看网络设备列表
+sudo nmcli dev
+
+开启wifi
+sudo nmcli r wifi on
+
+关闭wifi
+sudo nmcli r wifi off
+
+扫描附件热点
+sudo nmcli dev wifi
+
+连接 用户 SSID 密码的 PASSWORD 的热点 (其他热点修改对应用户及密码)
+sudo nmcli dev wifi connect "SSID" password "PASSWORD" ifname wlan0
+```
+
+**BLUETOOTH**
+
+
 
 
 
