--- a/a133/zh/02-入门必读/03-功能测试.md
+++ b/a133/zh/02-入门必读/03-功能测试.md
@@ -46,7 +46,7 @@ sudo nmcli dev wifi
 sudo nmcli dev wifi connect "SSID" password "PASSWORD" ifname wlan0
 ```
 
-**BLUETOOTH**
+**BlueTooth**
 
 
 
